# DirectX12

./: .gitignore  CMakeLists.txt  README.md  generate_project.bat
.github/workflows/: cmake.yml
common/: CMakeLists.txt
common/include/common/: camera.h  compiler.h  example.h  file_system.h  image_loader.h  resource_uploader.h  timer.h  uploader.h  utility.h  window.h
common/src/: camera.cpp  compiler.cpp  example.cpp  file_system.cpp  image_loader.cpp  resource_uploader.cpp  timer.cpp  uploader.cpp  utility.cpp  window.cpp
depth_test/: CMakeLists.txt
depth_test/asset/: pass_through.hlsl
depth_test/src/: depth_test.cpp
raytracing_triangle/: CMakeLists.txt
raytracing_triangle/asset/: raytracing.hlsl
raytracing_triangle/src/: raytracing_triangle.cpp
sampler/: CMakeLists.txt
sampler/asset/: unlit.hlsl  uv_test_pattern.dds
sampler/src/: sampler.cpp
template/: CMakeLists.txt
template/src/: template.cpp
texture/: CMakeLists.txt
texture/asset/: lighting.hlsl
texture/src/: texture.cpp
triangle/: CMakeLists.txt
triangle/asset/: pass_through.hlsl
triangle/src/: triangle.cpp
